# Kolibrie

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RSP_ENGINE_IMPROVEMENTS.md  STATIC_WINDOW_JOINS.md  VOLCANO_RSP_INTEGRATION.md  architecture.txt  changes.txt  docker-compose.yml  out.txt
datalog/: Cargo.toml
datalog/benches/: reasoning_bench.rs
datalog/examples/: volcano_query_example.rs
datalog/src/: cross_window_sds.rs  knowledge_graph.rs  lib.rs  parser_n3_logic.rs  reasoner.rs  reasoning.rs  reasoning_experimental.rs  ruleindex.rs  volcano_query.rs  volcano_reasoner.rs
datalog/src/reasoning/: backward_chaining.rs  datalog_engine.rs  helpers.rs  materialisation.rs  repairs.rs  rules.rs  to_dot.rs
datalog/src/reasoning/materialisation/: cross_window_incremental.rs  cross_window_naive.rs  infer_generic.rs  my_naive.rs  provenance_infer_generic.rs  provenance_semi_naive.rs  sdd_seed_materialise.rs  semi_naive.rs  semi_naive_parallel.rs  semi_naive_with_repairs.rs
datalog/tests/: cross_window_tests.rs  reasoning_tests.rs
kolibrie/: Cargo.toml  build.rs
kolibrie/benches/: citybench_cross_window_compare.rs  cross_window_benchmark.rs  family_tree_cross_window_compare.rs  my_benchmark.rs  rsp_bench.rs  rsp_citybench_cross_window.rs
kolibrie/examples/: example.rs  simple_volcano.rs
kolibrie/examples/http_test/: http_check.rs
kolibrie/examples/policy/: automate_policy.rs
kolibrie/examples/real_dataset/: real_dataset.rs
kolibrie/examples/real_scenario/: drone_traffic_safety_demo.html  drone_traffic_safety_demo.rs  fraud_demo_qr.html  fraud_detection_dashboard.html  fraud_detection_system.rs  mqtt_example.rs  mqtt_real_scenario.rs  real_scenario.rs
kolibrie/examples/rsp_ql_engine/: README.md  basic_rsp_ql_example.rs  cross_window_join_example.rs  multi_window_example.rs  static_multi_window_join_example.rs  static_window_join_example.rs  volcano_comparison_example.rs  volcano_integration_test.rs  volcano_query_planner_example.rs
kolibrie/examples/sparql_syntax/: sparql_syntax.rs
kolibrie/examples/sparql_syntax/advanced_join/: advanced_join.rs
kolibrie/examples/sparql_syntax/advanced_sparql/: advanced.rs
kolibrie/examples/sparql_syntax/aggregate_function/: avg.rs  min.rs  sum.rs
kolibrie/examples/sparql_syntax/combination/: combination.rs  combination_logic_extend.rs  combination_ml.rs  combination_ml_change_conclusion.rs  combination_ml_savings.rs  combination_stream.rs  combined_syntax_example.rs  continious_stream.rs  full_combination.rs  multiple_conclusions.rs  real_scenario.rs
kolibrie/examples/sparql_syntax/concat/: concat.rs
kolibrie/examples/sparql_syntax/filter/: filter_char.rs  filter_complex.rs  filter_int.rs  filter_int_arithmetic.rs  filter_limit.rs  filter_with_orderby.rs  simple_filter.rs
kolibrie/examples/sparql_syntax/from_file/: cuda_example.rs  multi_thread.rs  one_thread.rs
kolibrie/examples/sparql_syntax/insert/: insert.rs
kolibrie/examples/sparql_syntax/knowledge_graph/: combined_rules_example.rs  contradictions.rs  datalog_example.rs  deep_taxonomy.rs  hierarchy_reasoning.rs  hierarchy_reasoning_advanced.rs  knowledge_graph.rs  knowledge_graph_test_scenarios.rs
kolibrie/examples/sparql_syntax/ml_train/: mnist_setup.txt  mnist_train.rs  predict_after_train.rs  provenance_feedback_loop.rs
kolibrie/examples/sparql_syntax/n3_data/: n3_data.rs  n3_data_advanced.rs
kolibrie/examples/sparql_syntax/n_triples_data/: n_triple_10M.rs  n_triple_10M_all_indexes.sh  n_triples_data.rs  temp.txt
kolibrie/examples/sparql_syntax/nested_query/: nested_query.rs
kolibrie/examples/sparql_syntax/rsp_ql_syntax/: retrieve.rs  retrieve_multiple_window.rs
kolibrie/examples/sparql_syntax/select_all/: select_all.rs
kolibrie/examples/sparql_syntax/select_semicolon/: select_semicolon.rs
kolibrie/examples/sparql_syntax/simple_join/: simple_join.rs
kolibrie/examples/sparql_syntax/simple_select/: simple_select.rs  simple_select_synth_data.rs
kolibrie/examples/sparql_syntax/synthetic_stream_benchmark/: generate_synthetic_stream.py  synthetic_stream_benchmark.rs  synthetic_stream_benchmark.sh
kolibrie/examples/sparql_syntax/user_defined_function/: udf.rs
kolibrie/examples/sparql_syntax/values_keyword/: values.rs
kolibrie/examples/sparql_syntax/volcano_optimizer/: volcano.rs
kolibrie/examples/synthetic_data/: gen_data.rs
kolibrie/examples/turtle/: turtle_example.rs
kolibrie/src/: custom_error.rs  dictionary.rs  error_handler.rs  execute_ml.rs  execute_ml_train.rs  execute_query.rs  index_manager.rs  knowledge_graph.rs  lib.rs  lsm_tree.rs  ml_feature_loader.rs  ml_predict_candle.rs  ml_predict_runtime.rs  neural_relations.rs  parser.rs  query_builder.rs  query_engine.rs  rsp.rs  rsp_engine.rs  sliding_window.rs  sparql_database.rs  storage_manager.rs  storage_trait.rs  utils.rs  volcano_optimizer.rs
kolibrie/src/cuda/: CMakeLists.txt  cuda_join.cu  cuda_join.rs  mod.rs
kolibrie/src/disk_storage/: lsm_tree.rs  mem_table.rs  mod.rs  sstable.rs  wal.rs
kolibrie/src/rsp/: builder.rs  lib.rs  mod.rs  r2r.rs  r2s.rs  s2r.rs  simple_r2r.rs  window_runner.rs
kolibrie/src/streamertail_optimizer/: README.md  mod.rs  optimizer.rs  types.rs  utils.rs
kolibrie/src/streamertail_optimizer/cost/: estimator.rs
kolibrie/src/volcano_optimizer/: README.md  mod.rs  optimizer.rs  types.rs  utils.rs
kolibrie/src/volcano_optimizer/cost/: estimator.rs  (+1 more)
kolibrie/tests/: integration_test.rs  ml_predict_candle_runtime.rs  parser_test.rs  querybuilder_test.rs  rdf_star_test.rs  rsp_engine_test.rs
ml/: Cargo.toml  build.rs
ml/examples/: fraud_predictor.py  predictor.py  saving_prediction.py  saving_predictor.py  temperature_predictor.py  traffic_predictor.py
ml/src/: candle_model.rs  lib.rs  mlschema.py  predictor.py  setup.py
python/: Cargo.toml  build.rs  test.py
python/examples/: contradictions.py  kolibrie_usage.py  test_kg.py  test_windowing.py
python/src/: lib.rs  py_knowledge_graph.rs  py_query_builder.rs
rsp/: Cargo.toml
rsp/src/: lib.rs  r2r.rs  r2s.rs  s2r.rs  stream.rs
(+100 files in other folders)
