[workspace]
resolver = "2"
members = [
  "kolibrie",
  "gpu",
  "shared",
  "datalog",
  "python",
  "ml",
]

exclude = [
  "target/", # exclude bench testing
]

[workspace.dependencies]
quick-xml = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rand = "0.8.5"
rayon = "1.10.0"
nom = "7.1.3"
url = "2.5.2"
percent-encoding = "2.3.1"
httparse = "1.9.4"
crossbeam = "0.8.4"
pyo3 = { version = "0.23.3", features = ["extension-module", "auto-initialize", "abi3-py310"] }

[profile.bench]
debug = true

[profile.dev]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = "thin"
panic = 'unwind'
incremental = false
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false