[workspace]
resolver = "2"
members = [
  "kolibrie",
  "gpu",
  "shared",
  "datalog",
  "python",
  "ml",
  "cli",
  "kolibrie-http-server",
]

exclude = [
  "target/", # exclude bench testing
]

[workspace.dependencies]
quick-xml = "0.38.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rand = "0.9.2"
rayon = "1.10.0"
nom = "8.0.0"
url = "2.5.2"
percent-encoding = "2.3.1"
httparse = "1.9.4"
crossbeam = "0.8.4"
pyo3 = { version = "0.25.1", features = ["extension-module", "auto-initialize", "abi3-py310"] }
clap = { version = "4.5.45", features = ["derive"] }

[profile.bench]
debug = true

[profile.dev]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = "thin"
panic = 'unwind'
incremental = false
codegen-units = 256

[profile.release]
opt-level = 3
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
