[package]
name = "datalog"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Datalog Engine"

[dependencies]
nom = { workspace = true }
shared = { path = "../shared" }
rayon = { workspace = true }
log = "0.4.28"
criterion = "0.7.0"

[[bench]]
name = "reasoning_benchmark"
path = "benches/reasoning_bench.rs"
harness = false