[package]
name = "ml"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
description = "Machine Learning"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
pyo3 = { workspace = true }
shared = { path = "../shared" }

[build-dependencies]
pyo3-build-config = "0.23.3"