[package]
name = "python"
version = "0.1.0"
edition = "2021"
description = "Python Binding"

[lib]
name = "py_kolibrie"  # Ensure this matches your #[pymodule] function
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
datalog = { path = "../datalog" }
shared = { path = "../shared" }
kolibrie = { path = "../kolibrie" }