[package]
name = "kolibrie-python"
version = "0.1.1"
edition = "2021"
description = "Python Binding"

[lib]
name = "kolibrie"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
datalog = { path = "../datalog" }
shared = { path = "../shared" }
kolibrie_core = { package = "kolibrie", path = "../kolibrie" }
