[package]
name = "rsp"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "RDF Stream Processing"

[dependencies]
log = "0.4.27"
tokio = { version = "1.48.0", features = ["sync","rt-multi-thread", "macros"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.17" ,features = ["sync"]}

